--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/Tickets.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/Tickets.cshtml
@@ -163,6 +163,7 @@
         </div>
         @using (Html.BeginForm("TicketBook", "Tomoca", FormMethod.Post))
         {
+            @Html.AntiForgeryToken()
             <input type="hidden" name="tenrap" value="1" id="tenrap" />
             <input type="hidden" name="luungay" value="99" id="luungay" />
             <input type="submit" id="choosing-ghe" value="Choosing Your Film" class="btn" style="margin-left: 42%; margin-top: 20px;" />
