--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/index.cshtml
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Views/Tomoca/index.cshtml
@@ -202,7 +202,7 @@
 <!--start content-->
 <div class="content" style="margin-bottom: 45px">
     <div class="moviescommingsoon">
-        <div class="titleMovies animate__animated animate__fadeInLeft">
+        <div class="titleMovies">
             <div class="ptitle">
                 <p id="titlename">MOVIES COMMING SOON</p>
                 <a style="color: white;" href="~/Tomoca/MovieReview" id="seeall">See All</a>
@@ -252,7 +252,7 @@
         </div>
     </div>
     <div class="review">
-        <div class="titleMovies animate__animated animate__fadeInLeft">
+        <div class="titleMovies">
             <div class="ptitle">
                 <p id="titlename">MOVIES REVIEW</p>
                 <a style="color: white;" href="~/Tomoca/MovieReview" id="seeall">See All</a>
@@ -293,7 +293,7 @@
         </div>
     </div>
     <div class="news">
-        <div class="titleMovies animate__animated animate__fadeInLeft">
+        <div class="titleMovies">
             <div class="ptitle">
                 <p id="titlename">NEWS</p>
                 <a style="color: white;" href="~/Tomoca/MoviesLatestNews" id="seeall">See All</a>
